[LJI-17] Rewrite integration test, rename service test properly, minor corrections.