@@ -21,7 +21,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.jeasy.random.EasyRandom;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -31,11 +30,13 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
 
-@WebMvcTest(controllers = PackageController.class)
+@WebMvcTest({PackageController.class, PackageService.class})
 @TestPropertySource(properties = "spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration")
 public class PackageIntegrationTest {
 
@@ -46,27 +47,21 @@ public class PackageIntegrationTest {
   private ObjectMapper objectMapper;
 
   @MockBean
-  private PackageService packageService;
-
-  @MockBean
   private PackageRepository packageRepository;
 
   private final EasyRandom easyRandom = new EasyRandom();
 
   @Test
   void testGetFilteredSortedPackages() throws Exception {
-    List<PackageEntity> packageEntities = easyRandom.objects(PackageEntity.class, 3)
-        .toList();
+    List<PackageEntity> packageEntities = easyRandom.objects(PackageEntity.class, 3).toList();
     List<PackageDTO> packageDTOs = packageEntities.stream()
         .map(PackageMapper.INSTANCE::entityToDto)
-        .collect(Collectors.toList());
+        .toList();
 
     Page<PackageDTO> pagedPackages = new PageImpl<>(packageDTOs, PageRequest.of(0, 3), packageDTOs.size());
 
-    Mockito.when(packageService.getFilteredSortedPackages(
-        any(),
-        any()
-    )).thenReturn(pagedPackages);
+    Mockito.when(packageRepository.findAll(any(Specification.class), any(Pageable.class)))
+        .thenReturn(new PageImpl<>(packageEntities));
 
     mockMvc.perform(get("/v1/packages/filtered")
             .param("name", "Package A")
@@ -81,21 +76,14 @@ public class PackageIntegrationTest {
         .andExpect(jsonPath("$.content[0].name").value(packageDTOs.get(0).getName()))
         .andExpect(jsonPath("$.content[1].name").value(packageDTOs.get(1).getName()))
         .andExpect(jsonPath("$.content[2].name").value(packageDTOs.get(2).getName()));
-
-    Mockito.verify(packageService).getFilteredSortedPackages(
-        any(),
-        any()
-    );
   }
-
 
   @Test
   void testAddPackage() throws Exception {
     PackageDTO packageDTO = easyRandom.nextObject(PackageDTO.class);
     PackageEntity packageEntity = PackageMapper.INSTANCE.dtoToEntity(packageDTO);
 
-    Mockito.when(packageRepository.save(any())).thenReturn(packageEntity);
-    Mockito.when(packageService.addPackage(any())).thenReturn(packageDTO);
+    Mockito.when(packageRepository.save(any(PackageEntity.class))).thenReturn(packageEntity);
 
     String packageJson = objectMapper.writeValueAsString(packageDTO);
     mockMvc.perform(post("/v1/packages")
@@ -107,19 +95,15 @@ public class PackageIntegrationTest {
 
   @Test
   void testGetAllPackages() throws Exception {
-    List<PackageEntity> packageEntities = easyRandom.objects(PackageEntity.class, 3).collect(Collectors.toList());
-    List<PackageDTO> packageDTOs = packageEntities.stream()
-        .map(PackageMapper.INSTANCE::entityToDto)
-        .collect(Collectors.toList());
+    List<PackageEntity> packageEntities = easyRandom.objects(PackageEntity.class, 3).toList();
 
     Mockito.when(packageRepository.findAll()).thenReturn(packageEntities);
-    Mockito.when(packageService.getAllPackages()).thenReturn(packageDTOs);
 
     mockMvc.perform(get("/v1/packages"))
-        .andDo(print())
         .andExpect(status().isOk())
         .andExpect(jsonPath("$").isArray())
-        .andExpect(jsonPath("$.length()").value(3));
+        .andExpect(jsonPath("$.length()").value(3))
+        .andExpect(jsonPath("$[0].name").value(packageEntities.get(0).getName()));
   }
 
   @Test
@@ -130,11 +114,11 @@ public class PackageIntegrationTest {
     PackageEntity packageEntity = PackageMapper.INSTANCE.dtoToEntity(packageDTO);
 
     Mockito.when(packageRepository.findById(packageId)).thenReturn(java.util.Optional.of(packageEntity));
-    Mockito.when(packageService.getPackageById(packageId)).thenReturn(packageDTO);
 
     mockMvc.perform(get("/v1/packages/{id}", packageId))
+        .andDo(print())
         .andExpect(status().isOk())
-        .andExpect(jsonPath("$.id").value(packageId.toString()));
+        .andExpect(jsonPath("$.name").value(packageDTO.getName()));
   }
 
   @Test
@@ -146,15 +130,13 @@ public class PackageIntegrationTest {
 
     Mockito.when(packageRepository.findById(eq(packageId))).thenReturn(Optional.of(packageEntity));
     Mockito.when(packageRepository.save(any(PackageEntity.class))).thenReturn(packageEntity);
-    Mockito.when(packageService.updatePackage(any(PackageDTO.class))).thenReturn(originalPackageDTO);
 
     String packageJson = objectMapper.writeValueAsString(originalPackageDTO);
-    mockMvc.perform(put("/v1/packages")
+    mockMvc.perform(put("/v1/packages/{id}", packageId)
             .contentType(MediaType.APPLICATION_JSON)
             .content(packageJson))
         .andDo(print())
         .andExpect(status().isOk())
-        .andExpect(jsonPath("$.id").value(packageId.toString()))
         .andExpect(jsonPath("$.name").value(originalPackageDTO.getName()));
   }
 
@@ -168,8 +150,7 @@ public class PackageIntegrationTest {
 
     Mockito.when(packageRepository.findById(packageId))
         .thenReturn(java.util.Optional.of(packageEntity));
-    Mockito.when(packageRepository.save(any())).thenReturn(packageEntity);
-    Mockito.when(packageService.deactivatePackage(packageId)).thenReturn(packageDTO);
+    Mockito.when(packageRepository.save(any(PackageEntity.class))).thenReturn(packageEntity);
 
     mockMvc.perform(delete("/v1/packages/{id}", packageId))
         .andExpect(status().isOk())
